org_unpackaged/unpackaged/objects/Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssignmentLength__c</fullName>
        <inlineHelpText>In months</inlineHelpText>
        <label>Estimated Length of Initial Assignment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Actions_Completed_Date__c</fullName>
        <label>Associate Actions Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Associate_Actions_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if all actions that the new associate has to take have been completed</inlineHelpText>
        <label>Associate Actions Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Check_Drug_Screen_Required__c</fullName>
        <inlineHelpText>Required - results are required prior to completing enrollment 
Contingent - results are required, but enrollment can be completed before receiving
Not Required - the background check/drug screen is not required</inlineHelpText>
        <label>Background Check/Drug Screen Required</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSATransitionCall__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>At least 1 attempt followed by email documented in Salesforce.</inlineHelpText>
        <label>CSA Transition Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Insurance_Received__c</fullName>
        <label>Certificate of Insurance Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Notes__c</fullName>
        <label>Client Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Notified_Enrollment_is_Complete__c</fullName>
        <label>Client Notified Enrollment is Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_On_Boarding_Docs_Required__c</fullName>
        <inlineHelpText>Required - results are required prior to completing enrollment 
Contingent - results are required, but enrollment can be completed before receiving
Not Required - Client On-boarding docs are not required</inlineHelpText>
        <label>Client On-Boarding Docs Required</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Work_Authorization_Accepted__c</fullName>
        <label>Client Work Authorization Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_Enrollment_Call__c</fullName>
        <label>Enrollment Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_Created_Date__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete_Enrollment__c</fullName>
        <formula>IF(
   NOT(ISNULL(Enrollment_Completion_Date__c )),
   Enrollment_Completion_Date__c -  DATEVALUE(CreatedDate),
   NULL
  )</formula>
        <label>Days to Complete Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Call_Scheduled__c</fullName>
        <inlineHelpText>The date that the enrollment call was scheduled</inlineHelpText>
        <label>Enrollment Call Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Code</label>
        <referenceTo>Enrollment_Code__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_Completion_Date__c</fullName>
        <label>Enrollment Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedBillings__c</fullName>
        <label>Expected Initial 90 days of Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Enrollment_Notes__c</fullName>
        <label>Internal Enrollment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Expected Initial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Re_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the associate has previously been enrolled at MBO.</inlineHelpText>
        <label>Is this a Re-Enrollment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <formula>TEXT(Lead__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDFTWorker__c</fullName>
        <label>Enrolled in Medical/Dental Benefits?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDStartDate__c</fullName>
        <inlineHelpText>If they have Medical or Dental benefits, when is their start date?</inlineHelpText>
        <label>Medical/Dental Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Initial_Call_Attempt__c</fullName>
        <label>Most Recent Initial Call Attempt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCEUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the Net Case Estimate been attached to their Salesforce record?</inlineHelpText>
        <label>NCE Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_client_enrollment_is_complete__c</fullName>
        <label>Notify client enrollment is complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Initial_Call_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Initial Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks_To_Complete__c</fullName>
        <label>Number of Tasks To Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Enrollment_Begins__c</fullName>
        <label>Online Enrollment Begun</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Online_Portion_of_Enrollment_Completed__c</fullName>
        <label>Online Portion of Enrollment Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification_Documents_Received__c</fullName>
        <label>Qualification Documents Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_I9_form_List_A_if_applicable__c</fullName>
        <label>Received I9 form (List A if applicable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_Intro_Survey__c</fullName>
        <label>Received Intro Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_background_drug_screening_result__c</fullName>
        <label>Received Background/Drug Screen Result</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_signed_on_boarding_documents__c</fullName>
        <label>Received signed on-boarding documents</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_work_order_from_client__c</fullName>
        <label>Receive work order from client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>NOT(
    ISPICKVAL( Lead__r.fs_region__c ,&quot;&quot;)
    )</formula>
        <label>Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_NCE__c</fullName>
        <label>Reviewed NCE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFActivitiesClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SF Activities Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Activation_Email__c</fullName>
        <label>Sent Activation Email/Transition Worker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Enrollment_Link__c</fullName>
        <label>Sent Enrollment Link</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Intro_Email__c</fullName>
        <label>Sent Intro Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Service_Summary_Email__c</fullName>
        <label>Sent Service Summary Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setup_work_order_in_MBO__c</fullName>
        <label>Setup work order in MBO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_for_background_and_or_drug_screen__c</fullName>
        <label>Submit for background and/or drug screen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transition_Worker__c</fullName>
        <label>Transition Worker</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAST_Call_Completed__c</fullName>
        <label>VAST Call Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WOFee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Work Order Override Fee setup properly for Referral Rees, Premium Service Fees, etc?</inlineHelpText>
        <label>WO Fee Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOInvoicePreview__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the invoice preview been setup in the Work Order?</inlineHelpText>
        <label>WO Invoice Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOSetup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WO setup with attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>associateType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct Associate Type Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>forecastField__c</fullName>
        <formula>AND(
    NOT(
        ISNULL(Lead__r.AssignmentLength__c)
    ),
    NOT(
        ISNULL(Lead__r.InvoiceDate__c)
    ),
    NOT(
        ISNULL(Lead__r.ExpectedBilling__c)
    )
)</formula>
        <label>Forecast Fields Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>listADoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I-9, Passport, or LIST A doc in E-file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>opsAdmin__c</fullName>
        <formula>NOT(
    ISBLANK(Lead__r.rs_opsAdmin__c)
)</formula>
        <label>OA Assigned</label>
        <type>Checkbox</type>
    </fields>
    <label>Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Client_Enrollments</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Lead__c</columns>
        <columns>Contact__c</columns>
        <columns>Days_Since_Created_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Enrollment__c.Direct_Enrollment</value>
        </filters>
        <label>Client Enrollments</label>
    </listViews>
    <listViews>
        <fullName>Enrollment_Approval_Enrollment</fullName>
        <filterScope>Queue</filterScope>
        <label>Enrollment Approval</label>
        <queue>Enrollment_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_In_Progress_Enrollments</fullName>
        <columns>Lead__c</columns>
        <columns>Number_of_Tasks_To_Complete__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Days_Since_Created_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My In Progress Enrollments</label>
    </listViews>
    <nameField>
        <displayFormat>Enr-{00000000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <recordTypes>
        <fullName>Direct_Enrollment</fullName>
        <active>true</active>
        <label>Direct Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exec</fullName>
        <active>true</active>
        <label>Exec</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub</fullName>
        <active>true</active>
        <label>Sub</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enrollment_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Completed&quot;),
    RecordType.DeveloperName=&quot;Direct_Enrollment&quot;,
    NOT(ISCHANGED( Contact__c )),
    NOT(ISCHANGED( Activation_Date__c ))
   )</errorConditionFormula>
        <errorMessage>Please submit for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Future_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   Certificate_of_Insurance_Received__c &gt; TODAY(),
   
   Client_Work_Authorization_Accepted__c &gt; TODAY(),
   Complete_Enrollment_Call__c &gt; TODAY(),
   Enrollment_Call_Scheduled__c &gt; TODAY(),
   Most_Recent_Initial_Call_Attempt__c &gt; TODAY(),
   Online_Enrollment_Begins__c &gt; TODAY(),
   Online_Portion_of_Enrollment_Completed__c &gt; TODAY(),
   Qualification_Documents_Received__c &gt; TODAY(),
   Receive_background_drug_screening_result__c &gt; TODAY(),
   Receive_I9_form_List_A_if_applicable__c &gt; TODAY(),
   Receive_Intro_Survey__c &gt; TODAY(),
   Receive_signed_on_boarding_documents__c &gt; TODAY(),
   Receive_work_order_from_client__c &gt; TODAY(),
   Review_NCE__c &gt; TODAY(),
   Send_Activation_Email__c &gt; TODAY(),
   Send_Enrollment_Link__c &gt; TODAY(),
   Send_Intro_Email__c &gt; TODAY(),
   Send_Service_Summary_Email__c &gt; TODAY(),
   Setup_work_order_in_MBO__c &gt; TODAY(),
   Submit_for_background_and_or_drug_screen__c &gt; TODAY(),
   Transition_Worker__c &gt; TODAY(),
   VAST_Call_Completed__c &gt; TODAY()
  )</errorConditionFormula>
        <errorMessage>Future Dates cannot be entered. Please enter the date that the action was completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Benefits_for_Approval</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    ISPICKVAL( Status__c , &apos;Pending Approval&apos;),
    ISPICKVAL( MDFTWorker__c, &apos;&apos; )
)</errorConditionFormula>
        <errorDisplayField>MDFTWorker__c</errorDisplayField>
        <errorMessage>Please set the Med/Dental Benefits prior to submitting for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    ISPICKVAL(MDFTWorker__c,&quot;YES&quot;),
    ISBLANK(MDStartDate__c)
)</errorConditionFormula>
        <errorDisplayField>MDStartDate__c</errorDisplayField>
        <errorMessage>Please enter a start date if they are a FT worker.</errorMessage>
    </validationRules>
</CustomObject>